2004-07-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	suppress useless bindings

2004-07-27  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/mycode.el: 
	remove tons of unused code

	* dotemacs.el:
	move keys from mycode.el

	* perso/tempo-c++.el
	("c-include"): fix template basis
	("c-ifdef"): fix template basis
	("c-ifndef"): fix template basis

	* perso/patches.el
	(add-mhook): add same hook to multiple modes

	* perso/page-break.el:
	(page-break-mode): add autoload

	* perso/mycompletion.el:
	(gpl-header): move here, where it is needed

	* emacs.d/emacs-d-vars.el
	suppress useless code
	(provide): allow require

	* dotemacs.el
	(emacs-d-vars): use request instead of load-file
	(request): remove useless #
	disable delete-trailing-whitespace
	more autoloads

2004-07-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el
	(backup-directory-alist): autosaves settings are better here for quick use.

	* dotemacs-cust.el:
	suppressed the autosaves settings

2004-07-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	make use of request instead of require when possible

	* perso/setnu.el:
	initial checkin

	* perso/pod.el:
	initial checkin

	* perso/patches.el
	(match-paren): renamed after emacswiki

2004-07-19  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el
	(nnir): use it :)

	* dotemacs.el: use gnus as default mailer

	* dotemacs-cust.el
	(custom-set-variables): don't ask before saving eshell history, set preview-latex options

	* perso/patches.el:
	suppress backups hack
	(defmadvice): customize advice name
	reimplement buffer switching fix with defmadvice

	* dotemacs-cust.el
	(custom-set-variables): customized backup directory

2004-07-15  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(request): remove paragraph justification

	* dotemacs-cust.el
	(custom-set-variables): excluded tramp files from recentf, save in ~/.emacs-recentf

	* perso/xterm-extras.el:
	version update

	* perso/mycode.el: